ajout d'animation encore